# NDRaider

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  hailmary-safe-elevated.ps1  hailmary-vantage-elevated.ps1
bn-plugin/: README.md  __init__.py  mock_binaryninja.py  ndr_ffi.py  ndr_render.py  plugin.json  test_ffi.py  test_plugin.py  test_render.py
crates/ndr-cli/: Cargo.toml
crates/ndr-cli/src/: main.rs
crates/ndr-core/: Cargo.toml
crates/ndr-core/src/: error.rs  ffi.rs  grammar.rs  interface.rs  lib.rs  pe.rs  types.rs
crates/ndr-core/src/ndr/: interp.rs  mod.rs  opcodes.rs
crates/ndr-fuzz/: Cargo.toml
crates/ndr-fuzz/src/: alpc.rs  auth.rs  conn.rs  dcerpc.rs  json.rs  lib.rs  main.rs  marshal.rs  mutate.rs  rng.rs  transport.rs  value.rs
crates/ndr-fuzz/src/cov/: blocks.rs  debugger.rs  mod.rs
crates/ndr-gui/: Cargo.toml  build.rs
crates/ndr-gui/src/: app.rs  main.rs  runner.rs
docs/: AUTH_FINDINGS.md  NDR_NOTES.md
docs/img/: README.md
samples/ndrcomplex/: NdrComplex.idl  gen_oracle.cmd
samples/ndrcomplex2/: NdrComplex2.idl  gen_oracle.cmd
samples/ndrmarshal/: NdrMarshal.idl  gen_oracle.cmd
samples/ndrnorobust/: NdrNoRobust.idl  gen_oracle.cmd
samples/ndrtest/: NdrTest.idl  build.cmd  build_client.cmd  build_dllhost.cmd  build_server.cmd  client_main.c  dll_svc.c  host_main.c  rpc_proxy.py  run-crash-demo.cmd  server_impl.c  server_main.c  stubs  support.c
