[package]
name = "ndr-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "NDRaider GUI (Sani) - a visual front-end for ndr-cli/ndr-fuzz: sweep, select a target, tune options, fuzz, and watch a live pulse."

[[bin]]
name = "ndr-gui"
path = "src/main.rs"

[dependencies]
eframe = "0.29"
rfd = "0.14"
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
ico = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
